force-app/main/default/objects/PropertyTransformation__c/PropertyTransformation__c.object-meta.xml
<CustomObject>
    <label>Property Transformation</label>
    <nameField>
        <label>Attribute Transformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Transformations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>