force-app/main/default/objects/PropertyTransformation__c/fields/DistributedStateTransformation__c.field-meta.xml
<CustomField>
    <fullName>DistributedStateTransformation__c</fullName>
    <label>Distributed State Transformation</label>
    <referenceTo>DistributedStateTransformation__c</referenceTo>
    <relationshipLabel>Property Transformations</relationshipLabel>
    <relationshipName>PropertyTransformations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>