force-app/main/default/objects/PropertyTransformation__c/fields/IsDynamic__c.field-meta.xml
<CustomField>
    <fullName>IsDynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dynamic</label>
    <type>Checkbox</type>
</CustomField>