force-app/main/default/objects/PropertyTransformation__c/fields/SourcePropertyName__c.field-meta.xml
<CustomField>
    <fullName>SourcePropertyName__c</fullName>
    <label>Source Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>