force-app/main/default/objects/PropertyTransformation__c/fields/SourceValue__c.field-meta.xml
<CustomField>
    <fullName>SourceValue__c</fullName>
    <label>Source Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>