force-app/main/default/objects/PropertyTransformation__c/fields/TargetPropertyName__c.field-meta.xml
<CustomField>
    <fullName>TargetPropertyName__c</fullName>
    <label>Target Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>