force-app/main/default/objects/PropertyTransformation__c/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <label>Target Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>